$Id: CHANGES,v 1.259 2004/11/22 10:32:31 stelian Exp $

Changes between versions 0.4b37 and 0.4b38 (released ????????????)
==================================================================

1.	Fix a couple of troff syntax bugs in the man pages.
	Thanks to Eric Raymond <esr@thyrsus.com> for the patch.

2.	Made restore use either libncurses or libtermcap, depending
	on which one is available at configure time.

3.	Fixed restore negative size display bug when comparing a
	dump containing files over 2GB. Thanks to Steve Bonds
	<sbonds@users.sourceforge.net> for the bug report.

4.	Do not save directory entries to non-dumped inodes 
	(excluded from dump). This will eliminate the 'missing
	file' warnings when doing 'restore -C'.

5.	Fix dump crash when backuping a huge (2TB) filesystem,
	due to a bogus calculation on the inode map size.
	Thanks to Kevin B. Haines <K.B.Haines@rl.ac.uk> for 
	submitting the bug and testing the fix.

Changes between versions 0.4b36 and 0.4b37 (released July 7, 2004)
==================================================================

1.	Added the --enable-staticz configure option which enables
	dump and restore to be linked with static versions of
	libz and libbz2 (and dynamic versions of all other libraries).
	This will make Debian users happy, because libz and libbz2
	were the only needed libraries living in /usr, all the
	others live in /lib. In case of system emergency, it is 
	better not to have to rely on an extra filesystem.
	Thanks to Bdale Garbee <bdale@gag.com> for the suggestion.

2.	Fix compilation on (at least the Linux Debian port to) AMD64.
	(<ext2fs/ext2_types.h> defines some types (__s64 and __u64)
	that are also defined by <linux/types.h> (<asm/types.h>) and 
	they conflict).

3.	Make dump's reading of the dumpdates file a bit more robust,
	preventing dump from crashing when the dumpdates file has
	been modified by hand.

4.	Fixed some offset calculations in dump code which could 